Add "Latest Build" link with Google Drive icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/ChEngine/ChEngine/zipball/master" id="download-zip" class="button"><span>Source .zip</span></a>
-          <a href="https://drive.google.com/folderview?id=0B1V0LqDDmha_UUhjNEpTczlaNnM&usp=sharing" id="build-zip" class="button"><span>Latest Build</span></a>
+          <a href="https://drive.google.com/folderview?id=0B1V0LqDDmha_UUhjNEpTczlaNnM&usp=drive_web" id="download-build" class="button"><span>Latest Build</span></a>
           <a href="https://github.com/ChEngine/ChEngine" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
